<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.mapbox.com/mapbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Mapbox MapView to display the Japanese map -->
    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_resourceOptions_accessToken="@string/mapbox_access_token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Vertical FABs for zoom and location controls -->
    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/zoom_in"
            app:fabSize="mini"
            app:srcCompat="@drawable/add_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/zoom_out"
            app:fabSize="mini"
            app:srcCompat="@drawable/remove_24px" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_location"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/showSearchDialogButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/location_menu_search"
        android:background="@android:color/transparent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/search_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
