<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.mapbox.com/mapbox"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapRootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.maps.MapView
        android:id="@+id/mapViewFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_resourceOptions_accessToken="@string/mapbox_access_token" />

    <!-- アイコンのホイール -->
    <include layout="@layout/layout_marker_wheel" />

    <FrameLayout
        android:id="@+id/circleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="13dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/searchMarkerButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="ホイール切り替えボタン"
            android:background="@android:color/white"
            android:src="@drawable/wheel_register" />

    </FrameLayout>


    <!-- 地図操作用のFAB群をマップ上に重ねる -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="start|bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/showSearchDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@drawable/map_search_48px"
            android:contentDescription="@string/search_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@drawable/add_24px"
            android:contentDescription="@string/zoom_in"
            android:layout_marginTop="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/zoomOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@drawable/remove_24px"
            android:contentDescription="@string/zoom_out"
            android:layout_marginTop="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_mylocation"
            android:contentDescription="@string/my_location"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlayContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorImageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/error_network" />

            <Button
                android:id="@+id/errorCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="閉じる" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
